<resources>
    <string name="app_name">ICS</string>
    <string name="title_activity_navigation_manu">NavigationManu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_item_notifications">Уведомления</string>
    <string name="drawer_item_schedule">Расписание</string>
    <string name="drawer_item_marks">Оценки</string>
    <string name="drawer_item_visiting">Посещаемость</string>
    <string name="drawer_item_lectors">Преподаватели</string>
    <string name="drawer_item_subjects">Предметы ИКС</string>
    <string name="drawer_item_programs">Программы</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="drawer_item_info">Справка</string>
    <string name="detail_information_text">Подробная информация</string>

    <string name="week_odd">нечет.</string>
    <string name="week_even">чет.</string>
    <string name="no_lesson">Нет пары</string>

    <string name="subject_name">Название предмета: </string>
    <string name="type_of_subject">Тип занятия: </string>
    <string name="room_of_subject">Аудитория: </string>
    <string name="lecturer_of_subject">Преподаватель: </string>
    <string name="contacts">Контакты: </string>
    <string name="extra_info">Дополнительная инвормация: </string>
    <string name="semesters">Семестры: </string>
    <string name="ICS_subjects">Предметы, преподаваемые на кафедре ИС: </string>
    <string name="current_marks">Текущие оценки </string>
    <string name="semester_1">I</string>
    <string name="semester_2">II</string>
    <string name="sum_sign">∑</string>


    <string name="no_internet_connection_info">Невозможно скачать данные.Отсутствует интернет соединение. </string>
    <string name="loading_error">Ошибка при скачивании </string>

    <string name="student_name">Имя студента </string>
    <string name="student_surname">Фамилия студента </string>
    <string name="student_group">Группа студента </string>

    <string name="fill_all_fields">Заполните все поля </string>

    <string name="department">ИКС</string>
    <string name="not_department">Другие кафедны</string>
    <string name="all">Все</string>

    <string name="asking_info_for_exit">Вы уверены, что хотите выйти из учетной записи? Все данные будут потеряны.</string>

    <string name="credit">Зачет</string>
    <string name="exam">Экзамен</string>

    <string name="refresh_text">Обновить</string>

    <string name="source_entropy">Энтропия источника</string>
    <string name="entropy_calculator">Калькулятор для подсчета энтропии</string>
    <string name="count">Подсчитать энтропию</string>
    <string name="a">a</string>
    <string name="clear">Очистить</string>
    <string name="сalculate">Вычислить</string>
    <string name="answer">Решение:</string>

    <string name="complete_registration">Заполните регистрационную форму</string>
    <string name="incorrect_user_data">Данные пользователя некорректны. Заполните форму повторно.</string>

    <string name="action_settings">Settings</string>
</resources>
