<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vakery.ics.SubjectInfo">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/tool_bar_top_padding"
        android:transitionName="actionBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="предмет"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:id="@+id/subjectInfoSubjectName"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:text="@string/type_of_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:text="лекция"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:id="@+id/subjectInfoType"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:text="@string/room_of_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:text="@string/lecturer_of_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:text="ФИО"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subjectInfoLecturer"
        android:textColor="@android:color/black"
        android:layout_below="@+id/subjectInfoRoom"
        android:layout_alignLeft="@+id/subjectInfoRoom"
        android:layout_alignStart="@+id/subjectInfoRoom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="24sp" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subjectInfoRoom"
        android:textColor="@android:color/black"
        android:layout_below="@+id/subjectInfoType"
        android:layout_alignLeft="@+id/subjectInfoType"
        android:layout_alignStart="@+id/subjectInfoType"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/subject_name"
        android:textColor="@android:color/black"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

</RelativeLayout>
