<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vakery.ics.Presentation.MarksActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:transitionName="actionBar"
        android:layout_alignParentTop="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/entropy" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/activityEntropyCalculatorAiShowLable"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activityEntropyCalculatorCalculateBtn"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignEnd="@+id/imageView"
            android:layout_above="@+id/textView3"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            tools:text="a1="
            android:singleLine="true" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_above="@+id/activityEntropyCalculatorAiShowLable"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="2"
            android:id="@+id/activityEntropyCalculatorAiEnterField"
            android:layout_width="50dp"
            android:textColor="@android:color/background_dark" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/сalculate"
            android:id="@+id/activityEntropyCalculatorCalculateBtn"
            android:layout_below="@+id/imageView"
            android:layout_toRightOf="@+id/editText2"
            android:layout_toLeftOf="@+id/activityEntropyCalculatorClearBtn"
            android:layout_toStartOf="@+id/activityEntropyCalculatorClearBtn"
            android:layout_weight="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/activityEntropyCalculatorClearBtn"
            android:layout_above="@+id/activityEntropyCalculatorAiShowLable"
            android:layout_alignRight="@+id/activityEntropyCalculatorAiShowLable"
            android:layout_alignEnd="@+id/activityEntropyCalculatorAiShowLable"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:text="@string/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@android:color/background_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activityEntropyCalculatorAnswerField"
            android:textColor="@android:color/background_dark" />
    </ScrollView>

</LinearLayout>